make comment field background white, correct text align, no padding

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -14,6 +14,13 @@
   min-width: 70%;
 }
 
+#new-comment-content .trix-content,
+#edit-comment-content .trix-content {
+  background-color: white !important;
+  padding: 0 !important;
+  text-align: left !important;
+}
+
 #sign-up-login-container {
   text-align: center;
   margin-bottom: 2%;
